Bug 87460 - Losing endnotes in table cell when reading docx in Writer
Summary: Losing endnotes in table cell when reading docx in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.4.2 release
Hardware: All Linux (All)
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.0.2 target:4.4.5
Keywords: bibisected, bisected, regression
: 87598 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-12-18 20:56 UTC by navjeetc
Modified: 2016-10-25 19:19 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Word doc with endnotes in table cell (128.01 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-12-18 20:56 UTC, navjeetc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description navjeetc 2014-12-18 20:56:49 UTC
Created attachment 111010 [details]
Word doc with endnotes in table cell

When reading MS Word .docx file created with MS Word 2010 that has endnotes in a table cell which has a Text wrapping of Around, the endnote in the table cell is not read/converted by LibreOffice writer, thus loosing the content.

I have tried this in both LibreOffice Writer 4.0.4.2 which we are using in production and also in ver. 4.3.4.1, SE Linux 6.5

The docx is attached.
Comment 1 navjeetc 2014-12-18 22:20:02 UTC
When we convert the docx file to html using the LibreOffice command line, we not only loose endnotes in table cell, we also loose text wrapping around the table cell and table cell is moved to its own line.
Comment 2 Cor Nouws 2014-12-21 19:54:41 UTC
I can confirm the problem.

The endnote 2 anchor is at the end of the sentence 'This is the picture caption' below the picture.

Why do you think this bugs severity should be Major?
Comment 3 navjeetc 2014-12-21 20:20:13 UTC
My main reason for this bug is being Major is that when reading the MS Wnord doc, we are losing content and in our case LibreOffice is core to our process to convert Word docs to html in a automated way and we cannot afford to loose data.
Comment 4 Cor Nouws 2014-12-21 20:31:17 UTC
Hi Navjeetc,

I've no idea of the size of your company, but did you consider professional support?
  http://www.libreoffice.org/get-help/professional-support/

Do you know if it worked in previous versions?

(I think the same questions from me apply for the HTML stuff, but pls file a separate bug for that.)

thanks,
Cor
Comment 5 navjeetc 2014-12-22 16:43:25 UTC
I will keep professional support in mind.

I am not very sure if this worked in old versions of Writer but we had other issues in the older version which prompted us to move to current version.

I have created a bug for basically the same issue which is encountered when converting a Word docs to html using soffice binary from command line.
Comment 6 Cor Nouws 2014-12-23 20:51:39 UTC
In LibreOffice 3.3.0 the second footnote is shown.

So this is a regression.

To be sorted out: introduced when... so bibisectrequest.

thanks for filing, navjeetc
Comment 7 Rostislav 'R.Yu.' Okulov 2014-12-24 19:20:44 UTC
87598 was bibisected
Comment 8 Rostislav 'R.Yu.' Okulov 2014-12-24 19:22:07 UTC
I gonna add bibisect result here too cause for clean whiteboard request.

I got this.

git bisect start
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect good 65fd30f5cb4cdd37995a33420ed8273c0a29bf00
# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
git bisect bad 793dbf6f80f497dfe587d560d6257f42a24273f6
# skip: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
git bisect skip 793dbf6f80f497dfe587d560d6257f42a24273f6
# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
git bisect bad 793dbf6f80f497dfe587d560d6257f42a24273f6
# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
git bisect bad 793dbf6f80f497dfe587d560d6257f42a24273f6
# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
git bisect bad 793dbf6f80f497dfe587d560d6257f42a24273f6
# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
git bisect bad 793dbf6f80f497dfe587d560d6257f42a24273f6
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect good 65fd30f5cb4cdd37995a33420ed8273c0a29bf00
# bad: [8092559c5013969ebda017d79200463b9b975038] source-hash-fd84daf696a368c2c7561b5253b32a63ecdeca4a
git bisect bad 8092559c5013969ebda017d79200463b9b975038
# good: [1a109635e9e00f738cac488d3b9871440939626e] source-hash-cac1f33e839469d884730350e46a21d92fb442f2
git bisect good 1a109635e9e00f738cac488d3b9871440939626e
# bad: [f823dd19086ed09fb8e2072050e963cf1bfcd5fe] source-hash-b679a2a02180c017bd8b596fb2e4f283bad93b75
git bisect bad f823dd19086ed09fb8e2072050e963cf1bfcd5fe
# good: [d6e77664858e871f74ec019c319596bb99e1a5ad] source-hash-21dd191b9fd5a75f7633ea27f745a347adb42ae3
git bisect good d6e77664858e871f74ec019c319596bb99e1a5ad
# good: [c4ed9cb7c1a77199f92fbc8bf04a0955a0a6e9f9] source-hash-934e051b16349a1ab6d2bdd9f03e60aaafcb2ec8
git bisect good c4ed9cb7c1a77199f92fbc8bf04a0955a0a6e9f9
# good: [503d7c2b955e6767e1d0d32d60084f93619c3915] source-hash-c3aa1cefdc6521d34a2a32c20bae1593e1edb5ba
git bisect good 503d7c2b955e6767e1d0d32d60084f93619c3915
# bad: [ed34cfdbba626475a559e90f8e1e33302b72cac4] source-hash-8638f1e72a3fe830c0e8dcc1bd847d4fb9e599ee
git bisect bad ed34cfdbba626475a559e90f8e1e33302b72cac4
# bad: [a38ebf7f0e1b02e817bf1d2c1fea777b5757b612] source-hash-bed0447cefb949fc77cfde7543397d96590082ba
git bisect bad a38ebf7f0e1b02e817bf1d2c1fea777b5757b612
# bad: [b7fb342114409f27651815a4fb9663cbdb9fd946] source-hash-c29af1572ad15ac5199a09e5812fb8354c165329
git bisect bad b7fb342114409f27651815a4fb9663cbdb9fd946
# first bad commit: [b7fb342114409f27651815a4fb9663cbdb9fd946] source-hash-c29af1572ad15ac5199a09e5812fb8354c165329
 b7fb342114409f27651815a4fb9663cbdb9fd946 is the first bad commit
commit b7fb342114409f27651815a4fb9663cbdb9fd946
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon Dec 10 08:43:40 2012 +0000

    source-hash-c29af1572ad15ac5199a09e5812fb8354c165329
    
    commit c29af1572ad15ac5199a09e5812fb8354c165329
    Author:     Caolán McNamara <caolanm@redhat.com>
    AuthorDate: Wed Aug 22 14:20:32 2012 +0100
    Commit:     Caolán McNamara <caolanm@redhat.com>
    CommitDate: Wed Aug 22 14:20:52 2012 +0100
    
        Resolves: rhbz#842292 crash in calling callback whose instance was deleted
    
        Change-Id: I4cc04d59f48b42cc105703daa9983dd7c9f7af62

:100644 100644 f48bbaa1aee4fff06b03f00d856ea90afc8f4bb1 4ef31fbafb0c6fd5facf46ad5e5f2c3151b7a150 M      autogen.log
:100644 100644 77e291a56c8feedd3992dd9c5917420647c9e573 2fe83a37019bb77da337c19f71e03604047b3f5a M      ccache.log
:100644 100644 dd86cf323227505bc8de0a58a14c1512687e5fa0 317825a87e2d4a9fc5e5037476a32d63a9008767 M      commitmsg
:100644 100644 8c0b0ea815bd74a322e365f8f118851ab08188f7 5916ce4e398448c1077ea677f9d0271c22a8f7e5 M      dev-install.log
:100644 100644 76bb1bc9512a65c3fd17fdfb8ded49c13d9ddde8 30ec6ef53acbb8a12c35651e909582d0a870a41b M      make.log
:040000 040000 45f170a51889800a6518fc1f3ecad287e19cc8dc fac44c717ea5908b4edd59ad684c8de62987ee88 M      opt
Comment 9 Matthew Francis 2014-12-25 08:40:46 UTC
The below commit appears to be when the issue started

Adding Cc: to vmiklos@collabora.co.uk. Could you possibly take a look at this? Thanks


commit edc4861a68e0269b83b17e0ec57912a1ce4220ad
Author: Miklos Vajna <vmiklos@suse.cz>
Date:   Wed Aug 15 16:31:51 2012 +0200

    n#775899 initial docx import of w:vertAnchor inside w:tblpPr
    
    Change-Id: I5c848a8d4c860a83d6729b8db40f744afad906d5
Comment 10 Matthew Francis 2014-12-25 08:43:28 UTC
*** Bug 87598 has been marked as a duplicate of this bug. ***
Comment 11 navjeetc 2015-01-29 20:20:11 UTC
(In reply to Matthew Francis from comment #9)
> The below commit appears to be when the issue started
> 
> Adding Cc: to vmiklos@collabora.co.uk. Could you possibly take a look at
> this? Thanks
> 
> 
> commit edc4861a68e0269b83b17e0ec57912a1ce4220ad
> Author: Miklos Vajna <vmiklos@suse.cz>
> Date:   Wed Aug 15 16:31:51 2012 +0200
> 
>     n#775899 initial docx import of w:vertAnchor inside w:tblpPr
>     
>     Change-Id: I5c848a8d4c860a83d6729b8db40f744afad906d5

Any progress on this issue?
Comment 12 Commit Notification 2015-06-23 07:05:08 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2fe248f2b36d541c0d243a620c217058a50a9d5d

tdf#87460 DOCX import: fix missing endnote in floattable

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2015-06-23 14:51:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=44b8948fd288625627e4ca46641451a3c6a56730&h=libreoffice-5-0

tdf#87460 DOCX import: fix missing endnote in floattable

It will be available in 5.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2015-07-03 19:52:20 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b21ed9a42321dd4b22b70bfc66b7d401f2d22cd4&h=libreoffice-4-4

tdf#87460 DOCX import: fix missing endnote in floattable

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Robinson Tryon (qubit) 2015-12-17 08:41:55 UTC Comment hidden (obsolete)