tdf#87460 DOCX import: fix missing endnote in floattable

Writer doesn't support foot or endnotes in TextFrames, so they are not
supported in OOXML floattables, either. In the past, floattables were
imported as normal tables, that's how this worked. Restore the old
situation till the core limitation is there, so we at least don't
regress.

(cherry picked from commit 2fe248f2b36d541c0d243a620c217058a50a9d5d)

Conflicts:
	writerfilter/source/dmapper/DomainMapperTableHandler.hxx
	writerfilter/source/dmapper/DomainMapper_Impl.hxx

Change-Id: I4eb62617e3131176f7371e9ca69f11bc9e948a0b
Reviewed-on: https://gerrit.libreoffice.org/16690
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>