writerfilter/source/dmapper/DomainMapperTableHandler.hxx
@@ -84,6 +84,9 @@ class DomainMapperTableHandler : public TableDataHandler<Handle_t , TablePropert
     sal_Int32 m_nCellIndex;
     sal_Int32 m_nRowIndex;
 
+    /// Did we have a foot or endnote in this table?
+    bool m_bHadFootOrEndnote;
+
     TableStyleSheetEntry * endTableGetTableStyle(TableInfo & rInfo, comphelper::SequenceAsVector<css::beans::PropertyValue>& rFrameProperties);
     CellPropertyValuesSeq_t endTableGetCellProperties(TableInfo & rInfo, std::vector<HorizontallyMergedCell>& rMerges);
     RowPropertyValuesSeq_t endTableGetRowProperties();
@@ -107,6 +110,7 @@ public:
     {
         return &m_xTableRange;
     };
+    void setHadFootOrEndnote(bool bHadFootOrEndnote);
 };
 
 }}
